# riscv-compilation

./: .gitignore  README.md  Reducing zkVM precompiles.md
geth/: README.md  geth_tx_asset_and_evm_bin_script.sh  geth_tx_asset_script.sh  go.mod  go.sum
geth/stateless-exec/: assets-by-path.go  assets-static.go  execution.go  helper.go  main.go  t-types.go  tx_iterator.go  utils.go
linux-syscalls/: REPORT.md
linux-syscalls/geth/: README.md
linux-syscalls/geth/assets/: env.json
linux-syscalls/geth/stateless-exec/: assets-by-path.go  helper.go  main.go  t-types.go
linux-syscalls/reth/: README.md
linux-syscalls/reth/src/: main.rs
reth/: Cargo.toml
zkvm-precomile-bench/: README.md
zkvm-precomile-bench/sp1/: Cargo.toml  Execution Bench Report.md  Makefile  Proof Gen and Verification Bench Report.md  README.md
zkvm-precomile-bench/sp1/crates/bench-utils/: Cargo.toml
zkvm-precomile-bench/sp1/crates/bench-utils-patched/: Cargo.toml
zkvm-precomile-bench/sp1/crates/bench-utils/src/: arkworks.rs  batched_bigint.rs  batched_bn.rs  init_rand.rs  lib.rs
zkvm-precomile-bench/sp1/crates/bn-with-bigint/: Cargo.toml
zkvm-precomile-bench/sp1/crates/bn-with-bigint-total/: Cargo.toml
zkvm-precomile-bench/sp1/crates/bn-with-bigint-total/examples/: dh.rs  joux.rs
zkvm-precomile-bench/sp1/crates/bn-with-bigint-total/src/: arith.rs  lib.rs
zkvm-precomile-bench/sp1/crates/bn-with-bigint-total/src/fields/: fp.rs  fq12.rs  (+4 more)
zkvm-precomile-bench/sp1/crates/bn-with-bigint/examples/: dh.rs  joux.rs
zkvm-precomile-bench/sp1/crates/bn-with-bigint/src/: arith.rs  lib.rs
(+9 files in other folders)
